--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,29 @@ version: '3'
 services:
  my-postgres:
    image: postgres
-   restart: always
+   expose:
+     - "5432"
    ports:
      - "5432:5432"
+   command: -p 5432
+   restart: unless-stopped
    environment:
      - POSTGRES_USER=postgres
      - POSTGRES_PASSWORD=93773621
      - POSTGRES_DB=forum
-   networks:
-     - forum
-   volumes:
-     - ../data :/var/lib/postgresql/data
+     - PGDATA=/var/lib/postgresql/data/pgdata
+  #  volumes:
+  #    - ../data :/var/lib/postgresql/data
 
-#  pgadmin:
-#    image: dpage/pgadmin4
-#    ports:
-#      - "5050:80"
-#    environment:
-#      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-#      - PGADMIN_DEFAULT_PASSWORD=admin
-#    networks:
-#      - forum
+ pgadmin:
+   image: dpage/pgadmin4
+   ports:
+     - "5050:80"
+   environment:
+     - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+     - PGADMIN_DEFAULT_PASSWORD=admin
+   depends_on: 
+     - my-postgres
 
  backend:
   image: anniexp/forum-backend:latest
@@ -30,23 +32,21 @@ services:
      - "8081:8081"
   depends_on:
      - my-postgres
-  networks:
-     - forum
-
+ 
  frontend:
    image: anniexp/forum-frontend:latest
    ports:
      - "3000:3000"
-   networks:
-     - forum
    depends_on:
      - backend
 
  watchtower:
    image: containrrr/watchtower
+   depends_on: 
+     - frontend
+   ports:
+     - "8082:8080"
    volumes:
      - ../wachtower:/var/run/docker.sock
    command: --monitor-only backend frontend --interval 86400
-
-networks:
- forum:
+   
