--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,4 @@
 name: CI
-runs-on: ubuntu-latest
 on:
   push:
     branches:
@@ -14,7 +13,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_NEW_TOKEN }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     # - name: Build and push
     #   uses: docker/build-push-action@v4
     #   with:
