--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
       - "main"
 jobs:
   docker:
-    runs-on: ububtu-latest
+    runs-on: [ubuntu-latest, windows-latest, macos-latest, self-hosted]
     steps:
     - name: Checkout
       uses: actions/checkout@v3
