--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,5 @@ jobs:
         #   backend
         #   frontend
     - name: Test
-      run: docker run --network container:forum-copy anniexp/forum-frontend:latest -s --retry 10 --retry-connrefused http://localhost:3000/
+      run: docker run --network container:curl localhost anniexp/forum-frontend:latest -s --retry 10 --retry-connrefused http://localhost:3000/
+    - run: curl localhost
