--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,5 +37,5 @@ jobs:
     # run: docker run --network container:forum-dockerized-frontend-1 anniexp/forum-frontend:latest http://localhost:3000/
     
     - name: Start the service
-      run: docker run -d --name my-service my-service
+      run: docker run -d --name forum-frontend forum-frontend
     - run:  docker run --network container:my-service anniexp/forum-frontend:latest --retry 10 --retry-connrefused http://localhost:3000/topics
